# viscosaur

./: CMakeLists.txt  README  analytic.cc  analytic.h  core.cc  core.h  dealiicontributions  defaults.py  design_decisions  elastic_stress.cc  elastic_stress.h  entry.py  profile  profiling  python_interface.cc  relevant_dealii_tutorials  visualize.py
.be/: id-cache
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/05ea1c05-a297-48f9-9f73-5bb0f7ff7b30/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/06dfc562-6b71-47ee-9560-dddb98a2ab63/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/0bb37bcf-3d0a-4b40-b6d7-7d778a8698ad/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/0bc8a183-50af-4746-b7fa-278203dbecc1/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/0d3dcf9a-9991-40f0-8f09-a4be958efff5/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/0df6d38d-1e0b-4b59-a5b9-c784cba0a062/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/0f0e4186-c0d9-41ba-ac12-64eaaa1753c9/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/12058c26-5af8-4f12-97aa-6511183164d8/: values
.be/01c9f7fc-30a7-41da-9309-2663eaff8b76/bugs/13e7cf57-dad9-4998-bc70-0a1b1c6a5be9/: values
cpp/: bdf2.h  boundary_cond.h  compare.h  control.cc  control.h  dg_step.cc  dg_step.h  fwd_euler.h  init_cond.h  inv_visc.h  linear_algebra.h  matrix_free_calculation.cc  matrix_free_calculation.h  nonlin.h  op_factory.h  problem_data.cc  problem_data.h  python_interface.cc  scheme.h  solution.cc  solution.h  stepper.cc  stepper.h  stress.cc  stress.h  stress_op.h  tla.cc  tla.h  velocity.cc  velocity.h
docs/: comments  design_decisions  relevant_dealii_tutorials
py/: attenuated_waves.py  controller.py  defaults.py  elastic_params.py  main.py  quasistatic.py  simple_solver.py  tla_test.py  visualize.py
python/: defaults.py  power_law_test.py  rate_state_test.py  simple_solver.py  tla_test.py  visualize.py
source/: analytic.cc  analytic.h  bdf2.h  boundary_cond.h  control.cc  control.h  core.h  fwd_euler.h  inv_visc.h  linear_algebra.h  nonlin.h  one_step_rhs.h  op_factory.h  parameters.cc  parameters.h  poisson.cc  poisson.h  problem_data.cc  problem_data.h  python_interface.cc  rhs.cc  rhs.h  scheme.h  solution.cc  solution.h  stress.cc  stress.h  stress_op.cc  stress_op.h  velocity.cc  velocity.h
(+72 files in other folders)
